--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
    "dependencies": {
       "@reduxjs/toolkit": "^2.2.1",
       "axios": "^1.6.7",
-      "firebase": "^10.8.0",
+      "mongoose": "^8.2.0",
       "next": "14.1.0",
       "prop-types": "^15.8.1",
       "react": "^18",
-      "react-datepicker": "^6.1.0",
       "react-dom": "^18",
       "react-icons": "^5.0.1",
       "react-redux": "^9.1.0",
@@ -32,7 +31,6 @@
       "eslint-plugin-react-refresh": "^0.4.3",
       "postcss": "^8",
       "react-refresh": "^0.14.0",
-      "tailwind-scrollbar": "^3.1.0",
       "tailwindcss": "^3.3.0"
    }
 }
