--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
    "dependencies": {
       "@reduxjs/toolkit": "^2.2.1",
       "axios": "^1.6.7",
+      "jsonwebtoken": "^9.0.2",
       "mongoose": "^8.2.0",
       "next": "14.1.0",
       "prop-types": "^15.8.1",
